# ray-tracer

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  README.md  main.cpp  mesh.cpp  mesh.h
kernels/: calculatePixel.cl  emitRays.cl  imageToInt.cl  intersectRay.cl  sortRays.cl
model/: crystal_ball.dae  crystal_ball.mtl  untitled.blend  untitled.blend1
